# CUDA-Path-Tracer

./: .gitignore  CMakeLists.txt  README.md  main.cu
common/: CMakeLists.txt  common.cuh  common.hpp
core/: CMakeLists.txt  camera.cu  camera.cuh  init.cu  init.cuh  input.cu  input.hpp  render.cu  render.cuh
doxygen/: Doxyfile  custom.css  custom_dark_theme.css
exr/: CMakeLists.txt  exr_utils.cu  exr_utils.cuh
utils/: CMakeLists.txt  cuda_utils.cuh  frame_to_image.cuh  logger.hpp  math_utils.cuh  timer.hpp
world/: CMakeLists.txt  hit.cuh  scene.cu  scene.hpp
world/geometry/: CMakeLists.txt  geometry.cuh  plane.cuh  sphere.cuh  triangle.cuh
world/material/: CMakeLists.txt  conductor.cuh  dielectric.cuh  diffuse.cuh  material.cuh  predefined_materials.hpp
